// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Race resolvers fetches single race 1`] = `
Object {
  "data": Object {
    "createRace": Object {
      "distance": 1000,
      "id": 1,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Race resolvers fetches single race 2`] = `
Object {
  "data": Object {
    "race": Object {
      "distance": 1000,
      "id": 1,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
